[package]
name = "bitstring-trees"
# also bump version in html_root_url in src/lib.rs
version = "0.1.1"
authors = ["Stefan Bühler <source@stbuehler.de>"]
edition = "2021"
description = "Trees based on bitstrings"
documentation = "https://docs.rs/bitstring-trees"
homepage = "https://github.com/stbuehler/rust-bitstring-trees"
repository = "https://github.com/stbuehler/rust-bitstring-trees"
categories = ["data-structures"]
keywords = ["bitstring","tree"]
readme = "README.md"
license = "MIT"
exclude = ["CHECKLIST.md"]

[badges]
appveyor = { repository = "stbuehler/rust-bitstring-trees" }

[dependencies]
bitstring = "0.2.0"

[dev-dependencies]
cidr = { version = "0.3.0", features = ["bitstring"] }
